--- a/.gitignore
+++ b/.gitignore
@@ -7,17 +7,18 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+.env
+.DS_Store
 
 /node_modules
 /yarn-error.log
-
+.gitlab
 .byebug_history
+# pem & certificates
+cert
+dump.rdb 
